# tinyagents

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  goal.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  audit.md  sdk-gaps.md
docs/modules/: expressive-language.md  graph.md  harness.md  registry.md
docs/modules/expressive-language/: README.md  implementation-status.md  reference.md
docs/modules/graph/: README.md  builder.md  checkpointing.md  execution.md  fault-tolerance.md  goals.md  interrupts.md  memory-boundary.md  milestones.md  nodes.md  observability.md  package.md  parallel-agents-forking.md  routing.md  runtime-policy.md  state-channels.md  streaming.md  subagents-recursion.md  subgraphs.md  todos.md  visualization-testkit.md
docs/modules/harness/: README.md  cache.md  context.md  cost.md  embeddings.md  limits-retry.md  middleware.md  model.md  observability-overview.md  observability.md  prompt.md  runtime.md  state-graph.md  store.md  streaming.md  structured-output.md  subagent-steering.md  summarization.md  testkit.md  tool.md  usage.md  workspace.md
docs/modules/registry/: README.md  design.md  events.md  model-catalog.md  model-catalog.snapshot.json  operations.md
docs/modules/repl-language/: README.md  design.md  operations.md
docs/modules/rlm/: README.md
docs/spec/: README.md  expressive-language-spec.md  graph-spec.md  harness-spec.md
examples/: agent_loop_tools.rs  basic_graph.rs  complex_graph.rs  durable_graph.rs  goals_and_todos.rs  local_model_probe.rs  openai_chat.rs  openai_graph_agent.rs  openai_self_blueprint.rs  openai_structured.rs  openai_tools.rs  orchestrator_subagents.rs  rag_blueprint.rs  resilient_graph.rs  rlm_python.rs  rlm_rhai.rs
examples/subconscious_loop/: README.md  autonomous_loop.rs  main.rs
src/: chat.rs  error.rs  graph.rs  lib.rs  model.rs  tool.rs
src/graph/: README.md  mod.rs
src/graph/builder/: mod.rs  test.rs  types.rs
src/graph/channel/: README.md  mod.rs  test.rs  types.rs
src/graph/checkpoint/: README.md  file.rs  mod.rs  sqlite.rs  test.rs  types.rs
src/graph/command/: mod.rs  test.rs  types.rs
src/graph/compiled/: README.md  executor.rs  mod.rs  routing.rs  state_api.rs  test.rs  types.rs
src/graph/export/: mod.rs  test.rs  types.rs
src/graph/goals/: README.md  continuation.rs  mod.rs  prompt.rs  store.rs  test.rs  tool.rs  types.rs
src/graph/legacy/: mod.rs  test.rs  types.rs
src/graph/observability/: README.md  langfuse.rs  mod.rs  test.rs  types.rs
src/graph/orchestration/: README.md  mod.rs  runtime.rs  store.rs  test.rs  tool.rs  types.rs
src/graph/parallel/: mod.rs  test.rs  types.rs
src/graph/recursion/: mod.rs  test.rs  types.rs
src/graph/reducer/: mod.rs  test.rs  types.rs
src/graph/status/: mod.rs  test.rs  types.rs
src/graph/stream/: mod.rs  test.rs  types.rs
src/graph/subagent_node/: mod.rs  test.rs  types.rs
src/graph/subgraph/: README.md  mod.rs  test.rs  types.rs
src/graph/testkit/: README.md  conformance.rs  mod.rs  test.rs  types.rs
src/graph/thread_locks/: mod.rs  test.rs
src/graph/todos/: README.md  mod.rs  store.rs  test.rs  tool.rs  types.rs
src/harness/: agent_loop.rs  cache.rs  context.rs  cost.rs  events.rs  limits.rs  memory.rs  message.rs  middleware.rs  mod.rs  model.rs  no_progress.rs  prompt.rs  providers.rs  retry.rs  runtime.rs  store.rs  stream.rs  structured.rs  summarization.rs  testkit.rs  tool.rs  usage.rs
src/harness/agent_loop/: README.md  entry.rs  mod.rs  model_call.rs  run_loop.rs  stream.rs  test.rs  tools.rs  types.rs
src/harness/cache/: mod.rs  test.rs  types.rs
src/harness/cancel/: mod.rs  test.rs  types.rs
src/harness/context/: mod.rs  test.rs  types.rs
src/harness/cost/: mod.rs  test.rs  types.rs
src/harness/embeddings/: cloud.rs  cohere.rs  mod.rs  noop.rs  ollama.rs  openai.rs  rate_limit.rs  retry_after.rs  test.rs  types.rs  voyage.rs
src/harness/events/: mod.rs  test.rs  types.rs
src/harness/ids/: mod.rs  test.rs  types.rs
src/harness/limits/: mod.rs  test.rs  types.rs
src/harness/memory/: mod.rs  test.rs  types.rs
src/harness/message/: mod.rs  test.rs  types.rs
src/harness/middleware/: README.md  mod.rs  test.rs  types.rs
src/harness/model/: mod.rs  test.rs  types.rs
src/harness/no_progress/: mod.rs  successful_repeat.rs  test.rs  types.rs
src/harness/observability/: README.md  langfuse.rs  mod.rs  test.rs  types.rs  worker.rs
src/harness/prompt/: mod.rs  test.rs  types.rs
src/harness/providers/: mock.rs  mod.rs  test.rs  types.rs
src/language/: ast.rs  capability_resolver.rs  compiler.rs  diagnostic.rs  diff.rs  lexer.rs  mod.rs  parser.rs  resolver.rs  source.rs  span.rs  test.rs  testkit.rs  types.rs
src/registry/: catalog.rs  diagnostics.rs  mod.rs
src/repl/: mod.rs  test.rs  types.rs
src/rlm/: host.rs  mod.rs  runner.rs  session.rs  templates.rs  test.rs  types.rs
tests/: conformance.rs  e2e_agent_graph.rs  e2e_budget.rs  e2e_complex_graph.rs  e2e_control_and_steer.rs  e2e_durable_interrupt.rs  e2e_embeddings.rs  e2e_fuzz_graph_agents.rs  e2e_graph_export.rs  e2e_graph_goals.rs  e2e_graph_resolver_contracts.rs  e2e_graph_subagent_node.rs  e2e_graph_support_contracts.rs  e2e_graph_todos.rs  e2e_harness_provider_contracts.rs  e2e_language_contracts.rs  e2e_middleware.rs  e2e_middleware_parser_contracts.rs  e2e_misc_public_helpers.rs  e2e_observability.rs  e2e_orchestrator_subagents.rs  e2e_parallel_agents.rs  e2e_parallel_and_journals.rs  e2e_public_api_contracts.rs  e2e_rag_pipeline.rs  e2e_reasoning_and_selection.rs  e2e_registry_binding.rs  e2e_registry_observability_contracts.rs  e2e_repl_blueprint.rs  e2e_rlm.rs  e2e_steering.rs  e2e_streaming_cancel.rs  e2e_subagent_error.rs  e2e_subagent_reuse.rs  e2e_subagent_timeout.rs  e2e_subagents.rs  e2e_subconscious_loop_example.rs  e2e_tool_policy.rs  e2e_unknown_tool_policy.rs  e2e_workspace_and_registry.rs  (+47 more)
(+96 files in other folders)
